# miketang84-myblog004

./: .env.example  .gitignore  .plan  Cargo.toml  PRODUCT.md  README.md
.sqlx/: query-0ae44d278d7744692a71e0410f3050c44f7481a3ee235edefe5ffd1f053a84fb.json  query-0cb7826b1518302046ac81f607152f9aaa886c850fce82f7201fa250e01e57ff.json  query-160ca017d910f5c7bb53c69bedbe34337ec82aade61bf75dfa2a09358ffb3169.json  query-1ef4faf2fbd29c07f6eec0987c46fae3c054c79147a4f28dd4ac6ec6f97b6a08.json  query-2e7e77d41910940cdc2c1402d9bb3802705cc98ad3db92d33faa11b0d6918e25.json  query-3cd1966bc810e259166cb8889ae7d1ce913f76018734ab5eecf5b683b279b974.json  query-71bdafff9ef465d65b4fdda0d8fcf6c0a2c1069ef9a68b3aa7a15c7ffdfaf69d.json  query-87710ea7604c673a8a5005834497c22189dbd756b35c9e17244bb4382997e9c0.json  query-b33f59b9172e9a8de121b7cff1f0b9c245dd1d8c54946f364038987f41db372c.json  query-ca6c3b533c543262396f0e6a981a5ec32111f45f91556862ba3f3593c6506871.json  query-d0e1a0cb87a6ace2268c169c40a3ae275aa52be8acca5bdf8e9f751464d2151a.json  query-f124bf0a7dec44d8c98c4c77d39e320e99bb656b0081d47916d5429653ffd7ee.json  query-f993ecc8f09bd3acfa1e28240e678f763fbe293e88024bc26b124ed7abb8bf31.json  query-ffc8e30b326a802f72dcb97f22aa51fdc713436cd697c4a1c2b31e072cb74b7d.json
content/: about.md
migrations/: 20260510180000_create_admins.sql  20260510180500_create_posts.sql  20260510181000_create_tags_and_post_tags.sql
scripts/: redeploy_sprite.sh
src/: admin.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  markdown.rs  seed.rs  session.rs  slug.rs  state.rs  templates.rs
templates/: admin_base.html  base.html  error.html  home.html  post_detail.html  static_page.html  tag_listing.html
tests/: about.rs  admin_posts.rs  admin_routes.rs  auth.rs  e2e_happy_path.rs  error_pages.rs  home.rs  post_detail.rs  public_routes.rs  repositories.rs  robots.rs  rss.rs  seo.rs  sitemap.rs  slug.rs  tags.rs
(+14 files in other folders)
