[package]
name = "myblog004"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5"
ammonia = "4"
askama = "0.14"
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
pulldown-cmark = "0.13"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["postgres", "macros", "migrate", "runtime-tokio", "chrono", "uuid", "tls-rustls-ring"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tower-sessions-cookie-store = { version = "0.5", features = ["key-expansion"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
